--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  intl: ^0.16.1
-  http: ^0.12.2
+  provider: ^4.3.2+2 # for state management
+  intl: ^0.16.1      # for using date time package
+  http: ^0.12.2      # for sending the http requests
+  shared_preferences: ^0.5.12+4 # for storing data locally
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
